alsaplayer package WIP

--- a/package/Config.in
+++ b/package/Config.in
@@ -11,6 +11,7 @@ menu "Target packages"
 
 menu "Audio and video applications"
 	source "package/alsa-utils/Config.in"
+	source "package/alsaplayer/Config.in"
 	source "package/atest/Config.in"
 	source "package/aumix/Config.in"
 	source "package/bluez-alsa/Config.in"
