alsaplayer ogg vorbis disabled, no problems with make

--- a/overlay/etc/asound.conf
+++ b/overlay/etc/asound.conf
@@ -1,11 +1,16 @@
-pcm.!default {
-   type hw
-   card 0
-   device 2
-}
+# pcm.!default {
+#    type hw
+#    card 0
+#    device 2
+# }
 
-ctl.!default {
-   type hw
-   card 0
-   device 2
-}
+# ctl.!default {
+#    type hw
+#    card 0
+#    device 2
+# }
+
+defaults.pcm.!card 0
+defaults.ctl.!card 0
+defaults.pcm.!device 2
+defaults.ctl.!device 2
