--- a/package/Config.in
+++ b/package/Config.in
@@ -343,6 +343,7 @@ comment "Graphic libraries"
 	source "package/fbgrab/Config.in"
 	source "package/fbset/Config.in"
 	source "package/fbterm/Config.in"
+	source "package/yaft/Config.in"
 	source "package/fbv/Config.in"
 	source "package/freerdp/Config.in"
 	source "package/graphicsmagick/Config.in"
